package model;

public enum WypozyczenieStatus {
    REZERWACJA,
    W_TRAKCIE,
    OPLACONE,
    NIE_OPLACONE,
    PRZEKROCZONO_TERMIN
}