package model;

public enum ZlecenieStatus {
    WYDANIE,
    ODBIOR
}
